--- a/Html/guidelines.html
+++ b/Html/guidelines.html
@@ -68,22 +68,23 @@
 
 <a id="1887" class="Comment">-- Sect 5 CONCLUSION AND FUTURE WORK</a>
 
-<a id="1925" class="Comment">-- ####################################</a>
-<a id="1965" class="Comment">-- For appendix to a simulator of Solidity-style smart contracts in the theorem prover Agda</a>
-
-<a id="2058" class="Comment">-- The appendix is available at this git repository</a>
-<a id="2110" class="Comment">-- (https://github.com/fahad1985lab/A_simulator_of_Solidity-style_smart_contracts_in_the_theorem_prover_Agda)</a>
-
-<a id="2221" class="Comment">-- A TRANSLATON OF SOLIDITY INTO AGDA</a>
-
-<a id="2260" class="Comment">-- A.1 Simple Simulator</a>
-
-<a id="2285" class="Keyword">open</a> <a id="2290" class="Keyword">import</a> <a id="2297" href="Simple-Model.example.examplecounter_from_Solidity_into_Agda.html" class="Module Operator">Simple-Model.example.examplecounter_from_Solidity_into_Agda</a>
 
 
-<a id="2359" class="Comment">-- A.2 Complex simulator</a>
 
-<a id="2385" class="Keyword">open</a> <a id="2390" class="Keyword">import</a> <a id="2397" href="Complex-Model.example.votingexample-complex_From_Solidity_into_Agda.html" class="Module Operator">Complex-Model.example.votingexample-complex_From_Solidity_into_Agda</a>
+<a id="1928" class="Comment">-- ####################################</a>
+<a id="1968" class="Comment">-- For appendix to a simulator of Solidity-style smart contracts in the theorem prover Agda</a>
 
-<a id="2466" class="Keyword">open</a> <a id="2471" class="Keyword">import</a> <a id="2478" href="libraries.IOlibrary.html" class="Module">libraries.IOlibrary</a>
+<a id="2061" class="Comment">-- The appendix is available at this git repository</a>
+<a id="2113" class="Comment">-- (https://github.com/fahad1985lab/A_simulator_of_Solidity-style_smart_contracts_in_the_theorem_prover_Agda)</a>
+
+<a id="2224" class="Comment">-- A TRANSLATON OF SOLIDITY INTO AGDA</a>
+
+
+<a id="2264" class="Comment">-- A.1 Simple Simulator</a>
+<a id="2288" class="Keyword">open</a> <a id="2293" class="Keyword">import</a> <a id="2300" href="Simple-Model.example.solidityToagdaInsimplemodel-counterexample.html" class="Module">Simple-Model.example.solidityToagdaInsimplemodel-counterexample</a>
+
+
+<a id="2366" class="Comment">-- A.2 Complex simulator</a>
+<a id="2391" class="Keyword">open</a> <a id="2396" class="Keyword">import</a> <a id="2403" href="Complex-Model.example.solidityToagdaIncomplexmodel-votingexample.html" class="Module">Complex-Model.example.solidityToagdaIncomplexmodel-votingexample</a>
+<a id="2468" class="Keyword">open</a> <a id="2473" class="Keyword">import</a> <a id="2480" href="libraries.ComplexModelLibrary.html" class="Module">libraries.ComplexModelLibrary</a>
 </pre></body></html>
